# immortal-cpp

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.D7899C51BA9AFE2F.idx
src/: appmain.cpp  appmain.h  main.cpp  screenmanager.h
src/screens/: overworldscreen.cpp  overworldscreen.h  titlescreen.cpp  titlescreen.h
